C++ Driver Fails to connect to a replica set when the replica set is initially down and then is started

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Minor - P4
    • 2.2.0-rc1
    • Affects Version/s: None
    • Component/s: Internal Client
    • Environment:
      This issue was reproduced using the C++ driver on ubuntu but is also an issue on other systems.
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Start a test application that tries to connect to a replica set using the C++ driver. But make sure that when the application is started and the application tries to connect to the replica set using the mongo::DBClientReplicaSet that the replica set is initially down. Then wait a bit and bring up the replica set. In this case, the DBClientReplicaSet fails to reconnect to the replica set.

            Assignee:
            Randolph Tan
            Reporter:
            Benjamin
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved: