SERVER-5595 C++ Driver Fails to connect to a replica set when the replica set is initially down