src/mongo/client/dbclient_rs.h
@@ -336,6 +336,16 @@ namespace mongo {
          */
         bool _checkConnMatch_inlock( DBClientConnection* conn, size_t nodeOffset ) const;
 
+        /**
+         * Populates the local view of the set using the list of servers.
+         *
+         * Invariants:
+         * 1. Should be called while holding _setsLock and while not holding _lock since
+         *    this calls #_checkConnection, which locks _checkConnectionLock
+         * 2. _nodes should be empty before this is called
+         */
+        void _populateHosts_inSetsLock(const std::vector<HostAndPort>& seedList);
+
         // protects _localThresholdMillis, _nodes and refs to _nodes
         // (eg. _master & _lastReadPrefHost)
         mutable mongo::mutex _lock;
